Fix overflow issue on step details
Prevent status and details tab content overflowing the `.step-details`
container by setting `overflow: hidden`. This forces a horizontal
scrollbar on the codeblock when needed.

--- a/packages/components/src/components/StepDetails/StepDetails.scss
+++ b/packages/components/src/components/StepDetails/StepDetails.scss
@@ -1,5 +1,5 @@
 /*
-Copyright 2019 The Tekton Authors
+Copyright 2019-2020 The Tekton Authors
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
@@ -16,6 +16,7 @@ limitations under the License.
   flex-direction: column;
   flex-wrap: nowrap;
   align-items: stretch;
+  overflow: hidden;
 
   .bx--tabs {
     margin-top: 0.4rem;
